# Heart-strings-funny-bones

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
assets/: settings.json
assets/localizations/: eng.json  ru.json
source/: bound.hpp  main.cpp  mainScene.hpp  resource.hpp
source/widgets/: activatable.hpp  constantable.hpp
source/widgets/activatable/: clickable.hpp  horizontalWigets.hpp  number.hpp  outline.hpp  text.hpp  verticalWigets.hpp
source/widgets/activatable/clickable/: button.hpp  radioButton.hpp  slider.hpp  subButtons.hpp
source/widgets/constantable/: horizontalWigets.hpp  image.hpp  number.hpp  outline.hpp  text.hpp  verticalWigets.hpp
